# ABUS-JCR

code/: .gitignore  README.md  pyproject.toml
code/abus_jcr/: __init__.py  augment.py  cache.py  conventions.py  geometry.py  gt_labels.py  io_nrrd.py  lesions.py  manifest.py  preprocess.py  slice_dataset.py  slice_labels.py
code/abus_jcr/candidates/: generate.py  record.py
code/abus_jcr/detect/: __init__.py  atss.py  augment_ops.py  copy_paste.py  cost.py  det_stats.py  diagnostics.py  infer.py  metrics.py  retinanet.py  schema.py  select.py  slice_det_dataset.py  train.py
code/abus_jcr/eval/: __init__.py  _official_det_score.py  froc.py
code/abus_jcr/link/: aggregate.py  dedup.py  nms.py  reconstruct.py  tubes.py
code/scripts/: _common.py  _phase2_common.py  _phase3_common.py  phase0a_gt_doublecheck.py  phase0a_lesion_audit.py  phase0a_spacing_table.py  phase1_build_cache.py  phase1_build_manifest.py  phase1_build_slice_labels.py  phase1_resample_fidelity.py  phase1_visual_dump.py  phase2_anchor_coverage.py  phase2_cost.py  phase2_dump_detections.py  phase2_select_checkpoint.py  phase2_train_retinanet.py  phase2_train_stats.py  phase3_baseline_froc.py  phase3_calibrate_operating_point.py  phase3_candidate_diagnostics.py  phase3_cost.py  phase3_derive_caps.py  phase3_fp_structure_probe.py  phase3_freeze_linking.py  phase3_generate_candidates.py  phase3_geom_dedup_whatif.py  phase3_gt_reconstruction_check.py  phase3_linker_ablation.py  phase3_missed_lesion_probe.py  phase3_reducer_gate.py  phase3_step0_checkpoint_probe.py  phase3_tube_stats.py
code/tests/: test_aggregate.py  test_atss.py  test_augment_det_consistency.py  test_augment_policy.py  test_cache.py  test_candidate_diag.py  test_candidate_record.py  test_containment.py  test_copy_paste.py  test_dedup.py  test_det_stats_rule.py  test_detect_diagnostics.py  test_detection_schema.py  test_fp_structure_probe.py  test_froc_parity.py  test_geometry_roundtrip.py  test_gt_adapter.py  test_gt_box_doublecheck.py  test_infer_degenerate.py  test_io_discovery.py  test_iso_native_affine.py  test_lesions.py  test_link_caps_derivation.py  test_link_drift.py  test_link_monotonic.py  test_link_tubes.py  test_manifest_deterministic.py  test_metrics_ap2d.py  test_nms_3d.py  test_oof_selection.py  test_pool_reduce_3dnms.py  test_preprocess_geometry.py  test_reconstruct_geometry.py  test_retinanet_build.py  test_selection_linked_cpm.py  test_slice_dataset.py  test_slice_det_dataset.py  test_slice_labels.py  test_tube_geometry.py  test_vendored_det_score_identical.py
(+2 files in other folders)
