[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "abus_jcr"
version = "0.1.0"
description = "ABUS Joint Candidate Rescoring — Phase 0a gating checks + Phase 1 isotropic cache / slice-label substrate"
requires-python = ">=3.10"
# Phase-1 env. Phase-1 compute is CPU-only (pure preprocessing); torch/torchvision/
# ultralytics/monai/SimpleITK are RECORDED here for reproducibility but first
# EXERCISED in Phase 2, so the exact CUDA build does not gate this phase. The
# Phase-0 I/O contract test MUST stay green. Resampling uses scipy.ndimage.zoom
# (NOT MONAI) — MONAI's loaders read header spacing/orientation (identity
# placeholder here) and are reserved for the Phase-4 3D encoder.
dependencies = [
    # Phase-1 runtime (CPU-only preprocessing)
    "numpy",
    "pandas",
    "scipy",        # ndimage.zoom resample + connected components
    "pynrrd",       # NRRD read; provides the `nrrd` module
    "matplotlib",   # visual dump overlays; also imported by vendored det_score.py
    "tqdm",         # imported by the vendored det_score.py
    "pyarrow",      # Parquet slice-label table (CSV mirror always written too)
    # recorded now, first exercised in Phase 2+ (modeling)
    "torch",
    "torchvision",
    "ultralytics",
    "monai",
    "SimpleITK",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["abus_jcr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
